End-of-semester update.

--- a/vitae.tex
+++ b/vitae.tex
@@ -11,7 +11,7 @@
 %
 %                                 ***
 %
-% Written and modified between 2014 and 2020 by Manu Mannattil
+% Written and modified between 2014 and 2021 by Manu Mannattil
 %
 % Usage, modification, and distribution of this document, for any
 % purpose, with or without attribution, is permitted provided the
@@ -111,7 +111,7 @@
 %
 \begin{minipage}[t]{0.45\textwidth}
   Phone: (+1)~315-515-7373\\
-  Email: \email{mmannatt@syr.edu}
+  Email: \email{manu.mannattil@posteo.net}
 \end{minipage}\\
 
 % Personal Information {{{1
@@ -128,12 +128,12 @@ Born on August 13, 1991 in Palakkad, Kerala; Indian citizen.
 
 \begin{tabular}{@{}ll}
   \emph{Aug.~2017 -- present}   & Syracuse University, New York, USA: Ph.D. in Physics\\
-%                               & GPA: 3.956/4.000; Adviser: \href{https://thecollege.syr.edu/people/faculty/christian-d-santangelo}{Chris Santangelo}\\
+%                               & GPA: 3.958/4.000; Adviser: \href{http://cdsantan.expressions.syr.edu}{Chris Santangelo}\\
   \emph{Jul.~2009 -- Jul. 2014} & Indian Institute of Technology Kanpur, Uttar Pradesh, India: Int.~M.Sc.~in Physics\\
 %                               & GPA: 6.00/10.0; Adviser: \href{https://home.iitk.ac.in/~sagarc}{Sagar Chakraborty}\\
 % \emph{Jun.~2007 -- Mar. 2009} & Bhavan's Vidya Mandir, Poochatty, Thrissur, Kerala: Indian Senior School Certificate\\
 %                               & Percentage: 88.4\%\\
-% \emph{May.~2005 -- Mar. 2007} & Hari Sri Vidya Nidhi School, Thrissur, Kerala: Indian Certificate of Seconday Education\\
+% \emph{May 2005 -- Mar. 2007}  & Hari Sri Vidya Nidhi School, Thrissur, Kerala: Indian Certificate of Seconday Education\\
 %                               & Percentage: 93.4\%
 \end{tabular}
 
@@ -143,10 +143,10 @@ Born on August 13, 1991 in Palakkad, Kerala; Indian citizen.
 \section*{Employment History}
 
 \begin{tabular}{@{}ll}
-  \emph{Aug.~2019 -- present}   & Research Assistant, Department of Physics, Syracuse University, USA\\
-  \emph{Aug.~2017 -- present}   & Teaching Assistant, Department of Physics, Syracuse University, USA\\
-  \emph{Sep.~2014 -- Oct. 2015} & Project Associate, Nonlinear Dynamical Systems Group,\\
-                                & Indian Institute of Technology Kanpur, India
+  \emph{May 2020 -- present}     & Research Assistant, Department of Physics, Syracuse University, USA\\
+  \emph{Aug.~2017 -- May 2020}   & Teaching Assistant, Department of Physics, Syracuse University, USA\\
+  \emph{Sep.~2014 -- Oct. 2015}  & Project Associate, Nonlinear Dynamical Systems Group,\\
+                                 & Indian Institute of Technology Kanpur, India
 \end{tabular}
 
 % Publications {{{1
@@ -178,28 +178,20 @@ Born on August 13, 1991 in Palakkad, Kerala; Indian citizen.
 \section*{Awards and Honors}
 
 \begin{tabular}{@{}ll}
+  \emph{May 2020}  & College of Arts \& Sciences Award, Syracuse University\\
   \emph{Apr.~2018} & Fellowship from the Henry Levinstein fund, Department of Physics, Syracuse University\\
   \emph{Mar.~2011} & Kishore Vaigyanik Protsahan Yojana, Department of Science and Technology, Government of India
 \end{tabular}
 
-% Teaching {{{1
-% -------------
+% Talks {{{1
+% ----------
 
-\section*{Teaching Experience}
+\section*{Talks}
 
-\subsection*{Syracuse University}
-
-\begin{longtable}{@{}rl}
-  \emph{Spring 2020} & Teaching Assistant, PHY 212: General Physics II (Electricity \& Magnetism)\\
-  \emph{Fall 2019}   & Teaching Assistant, AST 101: Our Corner of the Universe\\
-  \emph{Summer 2019} & Course Instructor, PHY 212: General Physics II (Electricity \& Magnetism)\\
-  \emph{Spring 2019} & Teaching Assistant, PHY 222: General Physics II Lab (Electricity \& Magnetism)\\
-  \emph{Fall 2018}   & Teaching Assistant, PHY 211: General Physics I (Mechanics)\\
-  \emph{Fall 2018}   & Teaching Assistant, PHY 215: General Physics I for Majors (Mechanics)\\
-  \emph{Summer 2018} & Teaching Assistant, AST 101: Our Corner in the Universe\\
-  \emph{Spring 2018} & Teaching Assistant, PHY 212: General Physics II (Electricity \& Magnetism)\\
-  \emph{Fall 2017}   & Teaching Assistant, AST 101: Our Corner in the Universe
-\end{longtable}
+\begin{tabular}{@{}ll}
+  \emph{Mar.~2021} & ``Thermal Fluctuations of Singular Mechanical Networks'' at APS Virtual March Meeting 2021\\
+  \emph{Aug.~2015} & ``Introduction to Nonlinear Time Series Analysis'' at Modelling and Simulation Lab,\\ & Indian Institute of Technology Kanpur, Uttar Pradesh, India
+\end{tabular}
 
 % Service {{{1
 % ------------
@@ -208,14 +200,27 @@ Born on August 13, 1991 in Palakkad, Kerala; Indian citizen.
 
 Manuscript reviewer for \emph{Physics of Fluids}.
 
-% Talks {{{1
-% ----------
+% Teaching {{{1
+% -------------
 
-\section*{Talks}
+\section*{Teaching Experience}
 
-\begin{tabular}{@{}ll}
-  \emph{Aug.~2015} & ``Introduction to Nonlinear Time Series Analysis'' at Modeling and Simulation Lab,\\ & Indian Institute of Technology Kanpur, Uttar Pradesh, India
-\end{tabular}
+\subsection*{Syracuse University}
+
+Instructor for PHY 212 (Electricity \& Magnetism); Teaching Assistant for PHY 215 (Honors Mechanics), PHY 211 (General Mechanics), PHY 222 (Electricity \& Magnetism Lab), and AST 101 (Introductory Astronomy).
+
+% \begin{longtable}{@{}rl}
+%   \emph{Spring 2020} & Teaching Assistant, PHY 212: General Physics II (Electricity \& Magnetism)\\
+%   \emph{Fall 2019}   & Teaching Assistant, AST 101: Our Corner of the Universe\\
+%   \emph{Summer 2019} & Course Instructor, PHY 212: General Physics II (Electricity \& Magnetism)\\
+%   \emph{Spring 2019} & Teaching Assistant, PHY 222: General Physics II Lab (Electricity \& Magnetism)\\
+%   \emph{Fall 2018}   & Teaching Assistant, PHY 211: General Physics I (Mechanics)\\
+%   \emph{Fall 2018}   & Teaching Assistant, PHY 215: General Physics I for Majors (Mechanics)\\
+%   \emph{Summer 2018} & Teaching Assistant, AST 101: Our Corner in the Universe\\
+%   \emph{Spring 2018} & Teaching Assistant, PHY 212: General Physics II (Electricity \& Magnetism)\\
+%   \emph{Fall 2017}   & Teaching Assistant, AST 101: Our Corner in the Universe
+% \end{longtable}
+
 
 % % Schools and Workshops Attended {{{1
 % % -----------------------------------
@@ -234,7 +239,7 @@ Manuscript reviewer for \emph{Physics of Fluids}.
 
 \begin{tabular}{@{}p{1in}p{5in}}
   \emph{Languages}   & English (fluent), Hindi (basic), and Malayalam (native)\\
-  \emph{Programming} & Extensive experience in various programming languages including Python, C, Vim script, AWK, and various shells (Bash, POSIX sh, etc.)
+  \emph{Programming} & Extensive experience writing modular software following the ``one-thing-well'' philosophy in various programming languages including Python, C, Vim script, AWK, and various shells (Bash, POSIX sh, etc.)
 \end{tabular}
 
 % Revision Information {{{1
